time-complexity/networkPolicy_S.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-s
  namespace: test 
spec:
  podSelector:
    matchLabels:
      Skey1: Svalue1
      Skey2: Svalue2
      Skey3: Svalue3
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          Tkey1: Tvalue1
          Ukey1: Uvalue1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          Tkey1: Tvalue1
          Ukey1: Uvalue1
